--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios-cookiejar-support": "^6.0.4",
     "puppeteer": "^24.3.1",
     "puppeteer-extra": "^3.3.6",
+        "cheerio": "^1.1.2",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-extra-plugin-recaptcha": "^3.6.8"
   }
